@@ -9,7 +9,7 @@ django-celery==3.0.17
 django-kombu==0.9.4
 django-mathfilters==0.3.0
 python-memcached==1.53
-djangorestframework==3.0.0
+djangorestframework==3.1.3
 drf-extensions==0.2.7
 #bitfield depend on nose
 nose==1.3.1
