@@ -310,10 +310,10 @@ class SaleOrder(models.Model):
     
     total_fee    = models.FloatField(default=0.0,verbose_name=u'总费用')
     payment      = models.FloatField(default=0.0,verbose_name=u'实付款')
-
+    discount_fee = models.FloatField(default=0.0,verbose_name=u'优惠金额')
+    
     sku_name = models.CharField(max_length=256,blank=True,
                                            verbose_name=u'购买规格')
-    
     pic_path = models.CharField(max_length=512,blank=True,verbose_name=u'商品图片')
     
     created       =  models.DateTimeField(null=True,auto_now_add=True,blank=True,verbose_name=u'创建日期')
