@@ -1,4 +1,6 @@
 ########### 2015-8-26 #################
+alter table flashsale_order add discount_fee double NOT NULL;
+########### 2015-8-26 #################
 CREATE INDEX `shop_items_product_52094d6e` ON `shop_items_product` (`name`);
 CREATE INDEX `shop_items_product_aff30766` ON `shop_items_product` (`model_id`);
 CREATE INDEX `flashsale_productdetail_44e36594` ON `flashsale_productdetail` (`is_recommend`);
